# aptos-indexer-processors-v2

./: .gitignore  Cargo.toml  GEO-427-investigation.md
.github/actions/dep_install_and_lint/: action.yaml
.github/workflows/: build-images.yaml  copy-processor-images-to-dockerhub.yaml  integration-tests.yaml  lint.yaml  nightly-integration-tests.yaml  publish-protos-rust.yaml  test-coverage.yaml  update-sdk-dependency.yaml
hasura-api/metadata-json/: metadata.json
integration-tests/: Cargo.toml
integration-tests/src/diff_test_helper/: account_restoration_processor.rs  account_transaction_processor.rs  ans_processor.rs  default_processor.rs  fungible_asset_processor.rs  objects_processor.rs  stake_processor.rs  token_v2_processor.rs  user_transaction_processor.rs
integration-tests/src/models/: account_restoration_models.rs  account_transaction_models.rs  user_transaction_models.rs
integration-tests/src/sdk_tests/: account_restoration_processor_tests.rs  account_transaction_processor_tests.rs  ans_processor_tests.rs  default_processor_tests.rs  event_file_processor_tests.rs  events_processor_tests.rs  fungible_asset_processor_tests.rs  mod.rs  objects_processor_tests.rs  stake_processor_tests.rs  token_v2_processor_tests.rs  (+1 more)
moving-average/: Cargo.toml
processor/: Cargo.toml  build.rs  example-config-alerting.yaml  example-config-confidential-asset.yaml
processor/src/: lib.rs  main.rs
sample/: Cargo.toml
scripts/: check_license.py
scripts/test-confidential-asset/: .gitignore  package.json  pnpm-lock.yaml  processor-config.template.yaml  processor-config.yaml  repro-wasm-crash.ts  test-processor.ts
transaction-stream/: Cargo.toml
transaction-stream/src/: config.rs  lib.rs  transaction_stream.rs
transaction-stream/src/utils/: additional_headers.rs  mod.rs  time.rs
transaction-stream/tests/: failover_test.rs  stream_timeout_test.rs
(+204 files in other folders)
