[package]
name = "aptos-moving-average"
description = "Utility to calculate moving average such as TPS"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2024"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-indexer-processor-sdk"
rust-version = "1.93.1"

[dependencies]
chrono = { workspace = true }
